# together-app-backend

./: .dockerignore  .env.dev  .env.example  .env_template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DockerFile  Dockerfile  GEMINI.md  LICENSE  README.md  TESTS_COMPLETE.md  TEST_GENERATION_SUMMARY.md  alembic.ini  codecov.yml  debug_document_model.py  docker-compose.frontend-dev.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  gunicorn_conf.py  package-lock.json  pyproject.toml
.github/workflows/: build-dev-image.yml  deploy-production.yml  deploy-staging.yml  development.yml  release.yml  validate-frontend-compose.yml
alembic/: README.md  env.py
alembic/versions/: 065f503f6693_fix_notification_enum_values_to_.py  0e12f1acb42c_volunteer_services_and_favorite_missions.py  146aca8c125a_admin_have_unique_email.py  26d3be42dbb3_add_report_enums_and_validations.py  288dd6e558eb_add_hashed_refresh_token_to_user_and_.py  32ee6493ed3c_fix_user_date_creation_and_notification_.py  370a15506858_less_restrictive_phones_and_zip_code_.py  410f8d3a5fac_create_notification_table.py  4c39be31bf29_add_password_reset_to_user.py  8c7bc8e97742_implement_multi_category_missions.py  a5e891d45c62_added_notification_category_and_.py  b2a3c4d5e6f7_create_ai_report_table.py  c61256d9dc08_add_verification_status_to_association_.py  d1e2f3g4h5i6_seed_ai_test_content.py  e2f3g4h5i6j7_add_id_user_reported_to_ai_report.py  f8e229cd6650_user_and_admin_related_tables_.py  fe5fe30b5dd1_initial_migration.py
app/: DESCRIPTION.md  dependencies.py  initial_data.py  main.py
app/core/: ai_loader.py  config.py  dependencies.py  error_handlers.py  password.py  security.py  telemetry.py
app/database/: database.py  init_ai_test_data.py  init_db.py  init_dev_data.py  init_sample_data.py
app/exceptions/: __init__.py  auth.py  base.py  crud.py
app/internal/: admin.py
app/models/: __init__.py  admin.py  ai_report.py  analytics.py  assign.py  association.py  auth_profile.py  badge.py  category.py  document.py  engagement.py  enums.py  favorite.py  location.py  mission.py  mission_category.py  notification.py  password_reset.py  report.py  token.py  user.py  volunteer.py
app/routers/: ai_report.py  association.py  auth.py  category.py  document.py  mission.py  notification.py  report.py  user.py  volunteer.py
app/services/: admin.py  ai_moderation_client.py  ai_moderation_service.py  ai_report.py  analytics.py  association.py  category.py  document.py  email.py  engagement.py  location.py  mission.py  notification.py  profile.py  report.py  storage.py  user.py  utils.py  volunteer.py
app/utils/: logger.py  validation.py
scripts/: ai_daily_scan.py  prestart.sh  test_ai_inference.py  validate-frontend-env.py
security/: __init__.py  test_schemathesis_api.py
security/reports/: zap_report.html  zap_report.xml
tests/: README.md  conftest.py  test_core_config.py  test_core_dependencies.py  test_core_security.py  test_core_telemetry.py  test_database.py  test_internal_admin.py  test_main.py  test_models.py  test_routers_auth.py  test_smoke.py  test_utils_logger.py
tests/benchmarks/: README.md  __init__.py  conftest.py  test_admin_service_bench.py  test_ai_moderation_service_bench.py  test_analytics_service_bench.py  test_association_service_bench.py  test_auth_bench.py  test_category_service_bench.py  test_document_service_bench.py  test_engagement_service_bench.py  test_location_service_bench.py  test_mission_service_bench.py  test_notification_service_bench.py  test_report_service_bench.py  test_storage_service_bench.py  test_user_service_bench.py  test_volunteer_service_bench.py
tests/core/: test_ai_dependencies.py  test_dependencies.py  test_password.py  test_security.py
tests/database/: test_ai_seeding.py
tests/internal/: test_admin_ai_reports.py  test_admin_internal_router.py
tests/routers/: test_association_router.py  test_auth_router.py  test_category_router.py  test_document_router.py  test_engagement_listing.py  test_mission_router.py  test_report_router.py  test_volunteer_router.py
tests/security/: zap_scan.py
tests/services/: conftest.py  test_admin_service.py  test_ai_moderation_client.py  test_ai_moderation_service.py  test_ai_report_service.py  test_analytics_service.py  test_association_service.py  test_category_service.py  test_document_service.py  test_engagement_service.py  test_location_service.py  test_mission_service.py  test_notification_service.py  test_report_service.py  test_storage_service.py  test_user_service.py  test_volunteer_service.py
