[project]
name = "together-app-backend"
version = "0.1.0"
description = "REST API of the Together platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "databases>=0.9.0",
    "fastapi[standard]>=0.122.0",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-instrumentation-asyncpg>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-instrumentation-psycopg2>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy-citext>=1.8.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[tool.commitizen]
name = "cz_customize"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
breaking_change_exclamation_in_title = true

[tool.commitizen.customize]
message_template = "{{change_type}}:{% if jira_ticket %} {{jira_ticket}}{% endif %} {{message}}"
example = "feat: JIRA-123 add new feature"
schema = "<prefix>: <jira_ticket> <commit message>"
# Note the regex change to ([A-Z0-9]+-\\d+\\s)?
schema_pattern = "^(feat|fix|build|chore|ci|docs|style|refactor|perf|test|revert)(!?)[:](\\s?)([A-Z0-9]+-\\d+\\s)?(.+)$"
bump_pattern = "^(feat|fix|build|chore|ci|docs|style|refactor|perf|test|revert)(!?)"
bump_map = {"feat" = "MINOR", "fix" = "PATCH", "perf" = "PATCH"}
change_type_order = ["BREAKING CHANGE", "feat", "fix", "build", "chore", "ci", "docs", "style", "refactor", "perf", "test", "revert"]
commit_parser = "^(?P<change_type>feat|fix|build|chore|ci|docs|style|refactor|perf|test|revert)(!?)[:](\\s?)(?P<jira_ticket>[A-Z0-9]+-\\d+)?\\s?(?P<message>.*)"
changelog_pattern = "^(feat|fix|build|chore|ci|docs|style|refactor|perf|test|revert)?(!)?"
change_type_map = {"feat" = "Feat", "fix" = "Fix", "build" = "Build", "chore" = "Chore", "ci" = "CI", "docs" = "Docs", "style" = "Style", "refactor" = "Refactor", "perf" = "Perf", "test" = "Test", "revert" = "Revert"}

[tool.pyrefly]
infer-with-first-use = false
project_excludes = ["alembic/versions/*"]

[tool.ruff]
exclude = ["alembic/versions/*"]

[tool.pytest.ini_options]
# Benchmark markers for CodSpeed
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]
# Separate benchmark tests from regular tests
testpaths = ["tests"]
# Make benchmark fixtures available
python_files = ["test_*.py", "*_bench.py"]

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
choices = [
    {value = "feat", name = "feat: Introduces a new feature."},
    {value = "fix", name = "fix: A bug fix."},
    {value = "build", name = "build: Changes to the build system or external dependencies."},
    {value = "chore", name = "chore: Routine tasks (maintenance, cleanup)."},
    {value = "ci", name = "ci: Changes to CI configuration."},
    {value = "docs", name = "docs: Documentation-only changes."},
    {value = "style", name = "style: Code changes that don't affect meaning (formatting, whitespace)."},
    {value = "refactor", name = "refactor: Code changes that neither fix bugs nor add features."},
    {value = "perf", name = "perf: Code changes that improve performance."},
    {value = "test", name = "test: Adding or modifying tests."},
    {value = "revert", name = "revert: Reverts a previous commit."}
]
message = "Select the type of change you are committing"

[[tool.commitizen.customize.questions]]
type = "input"
name = "jira_ticket"
message = "Jira Ticket ID (If the branch is related to a ticket - press Enter to skip):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Short commit message (e.g., add user login feature)"

[[tool.commitizen.customize.questions]]
type = "input"
name = "body_message"
# 4. OPTIONAL: User can just press Enter to skip this
message = "Body message (Optional - press Enter to skip)"

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.5.0",
    "prek>=0.2.19",
    "pyrefly>=0.45.1",
    "pytest>=9.0.1",
    "pytest-codspeed>=4.2.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.8",
]
